Prevent klipper from overwriting valid empty selections

GTK applications tend to set valid empty selections sometimes. With the
current logic, the selection is overwritten by klipper, which in its
turn breaks the GTK apps.

In order to work reliably, this depends on an upstream patch to make
selection updates in GTK less racy. See
https://gitlab.gnome.org/GNOME/gtk/-/merge_requests/10006.

BUG: 517573